one more entry fixed

--- a/BSL/SkMonCloExtBSL.bib
+++ b/BSL/SkMonCloExtBSL.bib
@@ -377,7 +377,7 @@
   author = "Roy Dyckhoff and St{\'e}phane Lengrand",
   title = "LJQ: A Strongly Focused Calculus for Intuitionistic Logic",
   editor = "Arnold Beckmann and Ulrich Berger and Benedikt L{\"o}we and John V. Tucker",
-  booktitle = "Proceedings\ of 2nd Conf.\ on Computability in Europe, CiE 2006",
+  booktitle = "Proceedings\ of 2nd Conference\ on Computability in Europe, CiE 2006",
   XXXseries = "Lect.\ Notes in Comput.\ Sci.",
   series = "Lecture Notes in Computer Science",
   volume = 3988,
