text in abstract and introduction

--- a/BSL/SkMonCloExtBSL.bib
+++ b/BSL/SkMonCloExtBSL.bib
@@ -385,4 +385,19 @@
   publisher = "Springer",
   year = 2006,
   note = {{D}OI: \url{10.1007/11780342_19}}
-}  
+}
+
+
+@inproceedings{UVW:protsn,
+	title = {Proof Theory of Skew Non-Commutative MILL},
+	note = {{D}OI: \url{10.4204/eptcs.358.9}},
+	pages = {118--135},
+  booktitle = {Proceedings of 10th International Conference on Non-classical Logics: Theory and Applications, {NCL} 2022},
+  XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
+  series = "Electronic Proceedings in Theoretical Computer Science",
+	publisher = {Open Publishing Association},
+	author = {Tarmo Uustalu and Niccol{\`o} Veltri and Cheng-Syuan Wan},
+	editor = {Andrzej Indrzejczak and Michal Zawidzki},
+	volume = {358},
+	year = {2022}
+}
