--- a/BSL/bsl.tex
+++ b/BSL/bsl.tex
@@ -2748,7 +2748,7 @@ Estonian Research Council grants no. PSG659, PSG749 and PRG1210, N.V.\ and C.-S.
 Research Fund grant no.~196323-053.}
 
 \bibliographystyle{BSLbibstyle}
-\bibliography{SkMonCloExtBSL}
+\bibliography{bsl}
 
 
 \end{document}
